force-app/main/default/objects/cwbtool__ProfileComparison__c/cwbtool__ProfileComparison__c.object-meta.xml
<CustomObject>
    <label>Profile Comparison</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Profile Comparison Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Comparison</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>