force-app/main/default/objects/cwbtool__ProfileComparison__c/fields/cwbtool__Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Batch_Id__c</fullName>
    <label>Batch Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>