force-app/main/default/objects/cwbtool__ProfileComparison__c/fields/cwbtool__Export_to_Excel__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Export_to_Excel__c</fullName>
    <formula>HYPERLINK(&quot;/apex/cwbtool__VFC_ProfileComparisonPreviewbatch?smId=&quot;+ Id+&apos;&amp;excel=true&apos;, &quot;Export to excel&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Export to Excel</label>
    <type>Text</type>
</CustomField>