force-app/main/default/objects/cwbtool__ProfileComparison__c/fields/cwbtool__IsMultiOrg__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__IsMultiOrg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Multi Org</label>
    <type>Checkbox</type>
</CustomField>