force-app/main/default/objects/cwbtool__ProfileComparison__c/fields/cwbtool__Parent_Job_Failed__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Parent_Job_Failed__c</fullName>
    <label>Parent Job Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>