force-app/main/default/objects/cwbtool__ProfileComparison__c/fields/cwbtool__SelectedProfile__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__SelectedProfile__c</fullName>
    <label>Selected Profile</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>