force-app/main/default/objects/cwbtool__ProfileComparison__c/fields/cwbtool__SourceOrg__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__SourceOrg__c</fullName>
    <label>Source Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>