force-app/main/default/objects/cwbtool__ProfileComparison__c/fields/cwbtool__Status__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>