force-app/main/default/objects/cwbtool__ProfileComparison__c/fields/cwbtool__TargetOrg__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__TargetOrg__c</fullName>
    <label>Target Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>