force-app/main/default/objects/cwbtool__ProfileComparison__c/fields/cwbtool__View_Comparison_Detail__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__View_Comparison_Detail__c</fullName>
    <formula>HYPERLINK(&quot;/apex/cwbtool__VFC_ProfileComparisonPreviewbatch?smId=&quot;+ Id+&apos;&amp;previewonly=true&apos;, &quot;Click here to view analysis&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Comparison Detail</label>
    <type>Text</type>
</CustomField>