force-app/main/default/objects/cwbtool__ProfileComparison__c/listViews/cwbtool__All.listView-meta.xml
<ListView>
    <fullName>cwbtool__All</fullName>
    <columns>NAME</columns>
    <columns>cwbtool__Status__c</columns>
    <columns>cwbtool__SourceOrg__c</columns>
    <columns>cwbtool__TargetOrg__c</columns>
    <columns>cwbtool__Export_to_Excel__c</columns>
    <columns>cwbtool__View_Comparison_Detail__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>